2004-02-24  Christopher Faylor  <cgf@redhat.com>

	* gendef (stabilize_sig_stack): Correctly align this pointer for call
	to _cygtls::call_signal_handler.
	* gentls_offsets: Output sizeof field.
	* tlsoffsets.h: Regenerate.

2004-02-24  Christopher Faylor  <cgf@redhat.com>

	* dcrt0.cc (_dll_crt0): Don't check sync_startup if threadfunc_ix is set.

	* external.cc (cygwin_internal): Implement CW_GET_BINMODE.
	* include/sys/cygwin.h: Declare CW_GET_BINMODE.

2004-02-24  Christopher Faylor  <cgf@redhat.com>

	* dcrt0.cc (_dll_crt0): Add some stern internal errors.

2004-02-24  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc (pthread::cancelable_wait): Rearrange slightly.
	Add do_sig_wait parameter.  Wait for signal_arrived if set to true.
	Return WAIT_SIGNALED if signal arrived.
	(pthread_cond::wait): Accomodate change to pthread::cancelable_wait.
	(pthread::join): Ditto.
	(semaphore::_timedwait): Ditto.
	(semaphore::_wait): Ditto.  Change to return int to allow status
	feedback.
	(semaphore::wait): Return return value from semaphore::_wait.
	* thread.h (WAIT_SIGNALED): New definition.
	(pthread::cancelable_wait): Change declaration.  Define do_sig_wait   
	as false by default to not interfere with existing calls accidentally.
	(semaphore::_wait): Declare int.

2004-02-21  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (sigpacket::process): Make sure that tls is filled in
	for SIGSTOP condition.
	(_cygtls::call_signal_handler): Restore signal mask using saved oldmask
	rather than current oldmask.

2004-02-20  Christopher Faylor  <cgf@redhat.com>

	* path.cc (conv_path_list): Return error condition.
	(copy1): New function.
	(copyenc): New function.
	(mount_item::fnmunge): Return error condition.  Use new functions to
	copy strings.
	(mount_item::build_win32): Ditto.
	(mount_info::conv_to_win32_path): Return error condition.
	(cygwin_conv_to_posix_path): Return result of path conversion.
	(cygwin_conv_to_full_posix_path): Ditto.